InterpreteAugus/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOLAR
    LLAVEDER
    LLAVEIZQ
    NUMERAL

Grammar

Rule 0     S' -> S
Rule 1     S -> A
Rule 2     A -> MAIN DOSPUNTOS SENTENCIAS
Rule 3     SENTENCIAS -> SENTENCIA SENTENCIAS_
Rule 4     SENTENCIAS_ -> SENTENCIA SENTENCIAS_
Rule 5     SENTENCIAS_ -> <empty>
Rule 6     SENTENCIA -> ETIQUETA
Rule 7     SENTENCIA -> INSTRUCCIONES
Rule 8     SENTENCIA -> DECLARACIONES
Rule 9     ETIQUETA -> LABEL error DOSPUNTOS
Rule 10    ETIQUETA -> LABEL DOSPUNTOS
Rule 11    INSTRUCCIONES -> PRINT PARIZQ error PARDER PUNTOCOMA
Rule 12    INSTRUCCIONES -> IF PARIZQ error PARDER GOTO LABEL PUNTOCOMA
Rule 13    INSTRUCCIONES -> UNSET PARIZQ error PARDER PUNTOCOMA
Rule 14    INSTRUCCIONES -> EXIT error PUNTOCOMA
Rule 15    INSTRUCCIONES -> GOTO error PUNTOCOMA
Rule 16    INSTRUCCIONES -> PRINT PARIZQ EXPRESION PARDER PUNTOCOMA
Rule 17    INSTRUCCIONES -> IF PARIZQ EXPRESION PARDER GOTO LABEL PUNTOCOMA
Rule 18    INSTRUCCIONES -> UNSET PARIZQ ID PARDER PUNTOCOMA
Rule 19    INSTRUCCIONES -> EXIT PUNTOCOMA
Rule 20    INSTRUCCIONES -> GOTO LABEL PUNTOCOMA
Rule 21    DECLARACIONES -> ID ARRAY_
Rule 22    ARRAY_ -> error IGUAL EXPRESION PUNTOCOMA
Rule 23    ARRAY_ -> CORCHETES IGUAL error PUNTOCOMA
Rule 24    ARRAY_ -> IGUAL error PUNTOCOMA
Rule 25    ARRAY_ -> CORCHETES IGUAL EXPRESION PUNTOCOMA
Rule 26    ARRAY_ -> IGUAL EXPRESION PUNTOCOMA
Rule 27    CORCHETES -> CORCHETE CORCHETES_
Rule 28    CORCHETES_ -> CORCHETE CORCHETES_
Rule 29    CORCHETES_ -> <empty>
Rule 30    CORCHETE -> CORIZQ F CORDER
Rule 31    EXPRESION -> ATOMICO
Rule 32    EXPRESION -> FUNCION
Rule 33    EXPRESION -> OPERACION
Rule 34    OPERACION -> F error F
Rule 35    OPERACION -> MENOS error
Rule 36    OPERACION -> NOTLOGICA error
Rule 37    OPERACION -> NOTBIT error
Rule 38    OPERACION -> ANDBIT error
Rule 39    OPERACION -> F OPERADOR F
Rule 40    OPERACION -> MENOS F
Rule 41    OPERACION -> NOTLOGICA F
Rule 42    OPERACION -> NOTBIT F
Rule 43    OPERACION -> ANDBIT F
Rule 44    ATOMICO -> F
Rule 45    FUNCION -> ABS PARIZQ EXPRESION PARDER
Rule 46    FUNCION -> READ PARIZQ PARDER
Rule 47    FUNCION -> PARIZQ TIPO PARDER ID
Rule 48    FUNCION -> ARRAY PARIZQ PARDER
Rule 49    OPERADOR -> MAS
Rule 50    OPERADOR -> MENOS
Rule 51    OPERADOR -> DIV
Rule 52    OPERADOR -> POR
Rule 53    OPERADOR -> MODULO
Rule 54    OPERADOR -> AND
Rule 55    OPERADOR -> OR
Rule 56    OPERADOR -> XOR
Rule 57    OPERADOR -> IGUALQUE
Rule 58    OPERADOR -> DIFERENTE
Rule 59    OPERADOR -> MAYORIGUAL
Rule 60    OPERADOR -> MENORIGUAL
Rule 61    OPERADOR -> MAYORQUE
Rule 62    OPERADOR -> MENORQUE
Rule 63    OPERADOR -> ANDBIT
Rule 64    OPERADOR -> ORBIT
Rule 65    OPERADOR -> XORBIT
Rule 66    OPERADOR -> SHIFTIZQ
Rule 67    OPERADOR -> SHIFTDER
Rule 68    TIPO -> INT
Rule 69    TIPO -> FLOAT
Rule 70    TIPO -> CHAR
Rule 71    F -> NUMERO
Rule 72    F -> ID
Rule 73    F -> ID CORCHETES
Rule 74    F -> CADENA
Rule 75    F -> CHAR_

Terminals, with rules where they appear

ABS                  : 45
AND                  : 54
ANDBIT               : 38 43 63
ARRAY                : 48
CADENA               : 74
CHAR                 : 70
CHAR_                : 75
CORDER               : 30
CORIZQ               : 30
DIFERENTE            : 58
DIV                  : 51
DOLAR                : 
DOSPUNTOS            : 2 9 10
EXIT                 : 14 19
FLOAT                : 69
GOTO                 : 12 15 17 20
ID                   : 18 21 47 72 73
IF                   : 12 17
IGUAL                : 22 23 24 25 26
IGUALQUE             : 57
INT                  : 68
LABEL                : 9 10 12 17 20
LLAVEDER             : 
LLAVEIZQ             : 
MAIN                 : 2
MAS                  : 49
MAYORIGUAL           : 59
MAYORQUE             : 61
MENORIGUAL           : 60
MENORQUE             : 62
MENOS                : 35 40 50
MODULO               : 53
NOTBIT               : 37 42
NOTLOGICA            : 36 41
NUMERAL              : 
NUMERO               : 71
OR                   : 55
ORBIT                : 64
PARDER               : 11 12 13 16 17 18 45 46 47 48
PARIZQ               : 11 12 13 16 17 18 45 46 47 48
POR                  : 52
PRINT                : 11 16
PUNTOCOMA            : 11 12 13 14 15 16 17 18 19 20 22 23 24 25 26
READ                 : 46
SHIFTDER             : 67
SHIFTIZQ             : 66
UNSET                : 13 18
XOR                  : 56
XORBIT               : 65
error                : 9 11 12 13 14 15 22 23 24 34 35 36 37 38

Nonterminals, with rules where they appear

A                    : 1
ARRAY_               : 21
ATOMICO              : 31
CORCHETE             : 27 28
CORCHETES            : 23 25 73
CORCHETES_           : 27 28
DECLARACIONES        : 8
ETIQUETA             : 6
EXPRESION            : 16 17 22 25 26 45
F                    : 30 34 34 39 39 40 41 42 43 44
FUNCION              : 32
INSTRUCCIONES        : 7
OPERACION            : 33
OPERADOR             : 39
S                    : 0
SENTENCIA            : 3 4
SENTENCIAS           : 2
SENTENCIAS_          : 3 4
TIPO                 : 47

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . A
    (2) A -> . MAIN DOSPUNTOS SENTENCIAS

    MAIN            shift and go to state 3

    S                              shift and go to state 1
    A                              shift and go to state 2

state 1

    (0) S' -> S .



state 2

    (1) S -> A .

    $end            reduce using rule 1 (S -> A .)


state 3

    (2) A -> MAIN . DOSPUNTOS SENTENCIAS

    DOSPUNTOS       shift and go to state 4


state 4

    (2) A -> MAIN DOSPUNTOS . SENTENCIAS
    (3) SENTENCIAS -> . SENTENCIA SENTENCIAS_
    (6) SENTENCIA -> . ETIQUETA
    (7) SENTENCIA -> . INSTRUCCIONES
    (8) SENTENCIA -> . DECLARACIONES
    (9) ETIQUETA -> . LABEL error DOSPUNTOS
    (10) ETIQUETA -> . LABEL DOSPUNTOS
    (11) INSTRUCCIONES -> . PRINT PARIZQ error PARDER PUNTOCOMA
    (12) INSTRUCCIONES -> . IF PARIZQ error PARDER GOTO LABEL PUNTOCOMA
    (13) INSTRUCCIONES -> . UNSET PARIZQ error PARDER PUNTOCOMA
    (14) INSTRUCCIONES -> . EXIT error PUNTOCOMA
    (15) INSTRUCCIONES -> . GOTO error PUNTOCOMA
    (16) INSTRUCCIONES -> . PRINT PARIZQ EXPRESION PARDER PUNTOCOMA
    (17) INSTRUCCIONES -> . IF PARIZQ EXPRESION PARDER GOTO LABEL PUNTOCOMA
    (18) INSTRUCCIONES -> . UNSET PARIZQ ID PARDER PUNTOCOMA
    (19) INSTRUCCIONES -> . EXIT PUNTOCOMA
    (20) INSTRUCCIONES -> . GOTO LABEL PUNTOCOMA
    (21) DECLARACIONES -> . ID ARRAY_

    LABEL           shift and go to state 10
    PRINT           shift and go to state 11
    IF              shift and go to state 12
    UNSET           shift and go to state 14
    EXIT            shift and go to state 15
    GOTO            shift and go to state 13
    ID              shift and go to state 16

    SENTENCIAS                     shift and go to state 5
    SENTENCIA                      shift and go to state 6
    ETIQUETA                       shift and go to state 7
    INSTRUCCIONES                  shift and go to state 8
    DECLARACIONES                  shift and go to state 9

state 5

    (2) A -> MAIN DOSPUNTOS SENTENCIAS .

    $end            reduce using rule 2 (A -> MAIN DOSPUNTOS SENTENCIAS .)


state 6

    (3) SENTENCIAS -> SENTENCIA . SENTENCIAS_
    (4) SENTENCIAS_ -> . SENTENCIA SENTENCIAS_
    (5) SENTENCIAS_ -> .
    (6) SENTENCIA -> . ETIQUETA
    (7) SENTENCIA -> . INSTRUCCIONES
    (8) SENTENCIA -> . DECLARACIONES
    (9) ETIQUETA -> . LABEL error DOSPUNTOS
    (10) ETIQUETA -> . LABEL DOSPUNTOS
    (11) INSTRUCCIONES -> . PRINT PARIZQ error PARDER PUNTOCOMA
    (12) INSTRUCCIONES -> . IF PARIZQ error PARDER GOTO LABEL PUNTOCOMA
    (13) INSTRUCCIONES -> . UNSET PARIZQ error PARDER PUNTOCOMA
    (14) INSTRUCCIONES -> . EXIT error PUNTOCOMA
    (15) INSTRUCCIONES -> . GOTO error PUNTOCOMA
    (16) INSTRUCCIONES -> . PRINT PARIZQ EXPRESION PARDER PUNTOCOMA
    (17) INSTRUCCIONES -> . IF PARIZQ EXPRESION PARDER GOTO LABEL PUNTOCOMA
    (18) INSTRUCCIONES -> . UNSET PARIZQ ID PARDER PUNTOCOMA
    (19) INSTRUCCIONES -> . EXIT PUNTOCOMA
    (20) INSTRUCCIONES -> . GOTO LABEL PUNTOCOMA
    (21) DECLARACIONES -> . ID ARRAY_

    $end            reduce using rule 5 (SENTENCIAS_ -> .)
    LABEL           shift and go to state 10
    PRINT           shift and go to state 11
    IF              shift and go to state 12
    UNSET           shift and go to state 14
    EXIT            shift and go to state 15
    GOTO            shift and go to state 13
    ID              shift and go to state 16

    SENTENCIA                      shift and go to state 17
    SENTENCIAS_                    shift and go to state 18
    ETIQUETA                       shift and go to state 7
    INSTRUCCIONES                  shift and go to state 8
    DECLARACIONES                  shift and go to state 9

state 7

    (6) SENTENCIA -> ETIQUETA .

    LABEL           reduce using rule 6 (SENTENCIA -> ETIQUETA .)
    PRINT           reduce using rule 6 (SENTENCIA -> ETIQUETA .)
    IF              reduce using rule 6 (SENTENCIA -> ETIQUETA .)
    UNSET           reduce using rule 6 (SENTENCIA -> ETIQUETA .)
    EXIT            reduce using rule 6 (SENTENCIA -> ETIQUETA .)
    GOTO            reduce using rule 6 (SENTENCIA -> ETIQUETA .)
    ID              reduce using rule 6 (SENTENCIA -> ETIQUETA .)
    $end            reduce using rule 6 (SENTENCIA -> ETIQUETA .)


state 8

    (7) SENTENCIA -> INSTRUCCIONES .

    LABEL           reduce using rule 7 (SENTENCIA -> INSTRUCCIONES .)
    PRINT           reduce using rule 7 (SENTENCIA -> INSTRUCCIONES .)
    IF              reduce using rule 7 (SENTENCIA -> INSTRUCCIONES .)
    UNSET           reduce using rule 7 (SENTENCIA -> INSTRUCCIONES .)
    EXIT            reduce using rule 7 (SENTENCIA -> INSTRUCCIONES .)
    GOTO            reduce using rule 7 (SENTENCIA -> INSTRUCCIONES .)
    ID              reduce using rule 7 (SENTENCIA -> INSTRUCCIONES .)
    $end            reduce using rule 7 (SENTENCIA -> INSTRUCCIONES .)


state 9

    (8) SENTENCIA -> DECLARACIONES .

    LABEL           reduce using rule 8 (SENTENCIA -> DECLARACIONES .)
    PRINT           reduce using rule 8 (SENTENCIA -> DECLARACIONES .)
    IF              reduce using rule 8 (SENTENCIA -> DECLARACIONES .)
    UNSET           reduce using rule 8 (SENTENCIA -> DECLARACIONES .)
    EXIT            reduce using rule 8 (SENTENCIA -> DECLARACIONES .)
    GOTO            reduce using rule 8 (SENTENCIA -> DECLARACIONES .)
    ID              reduce using rule 8 (SENTENCIA -> DECLARACIONES .)
    $end            reduce using rule 8 (SENTENCIA -> DECLARACIONES .)


state 10

    (9) ETIQUETA -> LABEL . error DOSPUNTOS
    (10) ETIQUETA -> LABEL . DOSPUNTOS

    error           shift and go to state 19
    DOSPUNTOS       shift and go to state 20


state 11

    (11) INSTRUCCIONES -> PRINT . PARIZQ error PARDER PUNTOCOMA
    (16) INSTRUCCIONES -> PRINT . PARIZQ EXPRESION PARDER PUNTOCOMA

    PARIZQ          shift and go to state 21


state 12

    (12) INSTRUCCIONES -> IF . PARIZQ error PARDER GOTO LABEL PUNTOCOMA
    (17) INSTRUCCIONES -> IF . PARIZQ EXPRESION PARDER GOTO LABEL PUNTOCOMA

    PARIZQ          shift and go to state 22


state 13

    (15) INSTRUCCIONES -> GOTO . error PUNTOCOMA
    (20) INSTRUCCIONES -> GOTO . LABEL PUNTOCOMA

    error           shift and go to state 23
    LABEL           shift and go to state 24


state 14

    (13) INSTRUCCIONES -> UNSET . PARIZQ error PARDER PUNTOCOMA
    (18) INSTRUCCIONES -> UNSET . PARIZQ ID PARDER PUNTOCOMA

    PARIZQ          shift and go to state 25


state 15

    (14) INSTRUCCIONES -> EXIT . error PUNTOCOMA
    (19) INSTRUCCIONES -> EXIT . PUNTOCOMA

    error           shift and go to state 26
    PUNTOCOMA       shift and go to state 27


state 16

    (21) DECLARACIONES -> ID . ARRAY_
    (22) ARRAY_ -> . error IGUAL EXPRESION PUNTOCOMA
    (23) ARRAY_ -> . CORCHETES IGUAL error PUNTOCOMA
    (24) ARRAY_ -> . IGUAL error PUNTOCOMA
    (25) ARRAY_ -> . CORCHETES IGUAL EXPRESION PUNTOCOMA
    (26) ARRAY_ -> . IGUAL EXPRESION PUNTOCOMA
    (27) CORCHETES -> . CORCHETE CORCHETES_
    (30) CORCHETE -> . CORIZQ F CORDER

    error           shift and go to state 29
    IGUAL           shift and go to state 30
    CORIZQ          shift and go to state 33

    ARRAY_                         shift and go to state 28
    CORCHETES                      shift and go to state 31
    CORCHETE                       shift and go to state 32

state 17

    (4) SENTENCIAS_ -> SENTENCIA . SENTENCIAS_
    (4) SENTENCIAS_ -> . SENTENCIA SENTENCIAS_
    (5) SENTENCIAS_ -> .
    (6) SENTENCIA -> . ETIQUETA
    (7) SENTENCIA -> . INSTRUCCIONES
    (8) SENTENCIA -> . DECLARACIONES
    (9) ETIQUETA -> . LABEL error DOSPUNTOS
    (10) ETIQUETA -> . LABEL DOSPUNTOS
    (11) INSTRUCCIONES -> . PRINT PARIZQ error PARDER PUNTOCOMA
    (12) INSTRUCCIONES -> . IF PARIZQ error PARDER GOTO LABEL PUNTOCOMA
    (13) INSTRUCCIONES -> . UNSET PARIZQ error PARDER PUNTOCOMA
    (14) INSTRUCCIONES -> . EXIT error PUNTOCOMA
    (15) INSTRUCCIONES -> . GOTO error PUNTOCOMA
    (16) INSTRUCCIONES -> . PRINT PARIZQ EXPRESION PARDER PUNTOCOMA
    (17) INSTRUCCIONES -> . IF PARIZQ EXPRESION PARDER GOTO LABEL PUNTOCOMA
    (18) INSTRUCCIONES -> . UNSET PARIZQ ID PARDER PUNTOCOMA
    (19) INSTRUCCIONES -> . EXIT PUNTOCOMA
    (20) INSTRUCCIONES -> . GOTO LABEL PUNTOCOMA
    (21) DECLARACIONES -> . ID ARRAY_

    $end            reduce using rule 5 (SENTENCIAS_ -> .)
    LABEL           shift and go to state 10
    PRINT           shift and go to state 11
    IF              shift and go to state 12
    UNSET           shift and go to state 14
    EXIT            shift and go to state 15
    GOTO            shift and go to state 13
    ID              shift and go to state 16

    SENTENCIA                      shift and go to state 17
    SENTENCIAS_                    shift and go to state 34
    ETIQUETA                       shift and go to state 7
    INSTRUCCIONES                  shift and go to state 8
    DECLARACIONES                  shift and go to state 9

state 18

    (3) SENTENCIAS -> SENTENCIA SENTENCIAS_ .

    $end            reduce using rule 3 (SENTENCIAS -> SENTENCIA SENTENCIAS_ .)


state 19

    (9) ETIQUETA -> LABEL error . DOSPUNTOS

    DOSPUNTOS       shift and go to state 35


state 20

    (10) ETIQUETA -> LABEL DOSPUNTOS .

    LABEL           reduce using rule 10 (ETIQUETA -> LABEL DOSPUNTOS .)
    PRINT           reduce using rule 10 (ETIQUETA -> LABEL DOSPUNTOS .)
    IF              reduce using rule 10 (ETIQUETA -> LABEL DOSPUNTOS .)
    UNSET           reduce using rule 10 (ETIQUETA -> LABEL DOSPUNTOS .)
    EXIT            reduce using rule 10 (ETIQUETA -> LABEL DOSPUNTOS .)
    GOTO            reduce using rule 10 (ETIQUETA -> LABEL DOSPUNTOS .)
    ID              reduce using rule 10 (ETIQUETA -> LABEL DOSPUNTOS .)
    $end            reduce using rule 10 (ETIQUETA -> LABEL DOSPUNTOS .)


state 21

    (11) INSTRUCCIONES -> PRINT PARIZQ . error PARDER PUNTOCOMA
    (16) INSTRUCCIONES -> PRINT PARIZQ . EXPRESION PARDER PUNTOCOMA
    (31) EXPRESION -> . ATOMICO
    (32) EXPRESION -> . FUNCION
    (33) EXPRESION -> . OPERACION
    (44) ATOMICO -> . F
    (45) FUNCION -> . ABS PARIZQ EXPRESION PARDER
    (46) FUNCION -> . READ PARIZQ PARDER
    (47) FUNCION -> . PARIZQ TIPO PARDER ID
    (48) FUNCION -> . ARRAY PARIZQ PARDER
    (34) OPERACION -> . F error F
    (35) OPERACION -> . MENOS error
    (36) OPERACION -> . NOTLOGICA error
    (37) OPERACION -> . NOTBIT error
    (38) OPERACION -> . ANDBIT error
    (39) OPERACION -> . F OPERADOR F
    (40) OPERACION -> . MENOS F
    (41) OPERACION -> . NOTLOGICA F
    (42) OPERACION -> . NOTBIT F
    (43) OPERACION -> . ANDBIT F
    (71) F -> . NUMERO
    (72) F -> . ID
    (73) F -> . ID CORCHETES
    (74) F -> . CADENA
    (75) F -> . CHAR_

    error           shift and go to state 37
    ABS             shift and go to state 43
    READ            shift and go to state 44
    PARIZQ          shift and go to state 36
    ARRAY           shift and go to state 46
    MENOS           shift and go to state 47
    NOTLOGICA       shift and go to state 48
    NOTBIT          shift and go to state 49
    ANDBIT          shift and go to state 50
    NUMERO          shift and go to state 51
    ID              shift and go to state 45
    CADENA          shift and go to state 52
    CHAR_           shift and go to state 53

    EXPRESION                      shift and go to state 38
    ATOMICO                        shift and go to state 39
    FUNCION                        shift and go to state 40
    OPERACION                      shift and go to state 41
    F                              shift and go to state 42

state 22

    (12) INSTRUCCIONES -> IF PARIZQ . error PARDER GOTO LABEL PUNTOCOMA
    (17) INSTRUCCIONES -> IF PARIZQ . EXPRESION PARDER GOTO LABEL PUNTOCOMA
    (31) EXPRESION -> . ATOMICO
    (32) EXPRESION -> . FUNCION
    (33) EXPRESION -> . OPERACION
    (44) ATOMICO -> . F
    (45) FUNCION -> . ABS PARIZQ EXPRESION PARDER
    (46) FUNCION -> . READ PARIZQ PARDER
    (47) FUNCION -> . PARIZQ TIPO PARDER ID
    (48) FUNCION -> . ARRAY PARIZQ PARDER
    (34) OPERACION -> . F error F
    (35) OPERACION -> . MENOS error
    (36) OPERACION -> . NOTLOGICA error
    (37) OPERACION -> . NOTBIT error
    (38) OPERACION -> . ANDBIT error
    (39) OPERACION -> . F OPERADOR F
    (40) OPERACION -> . MENOS F
    (41) OPERACION -> . NOTLOGICA F
    (42) OPERACION -> . NOTBIT F
    (43) OPERACION -> . ANDBIT F
    (71) F -> . NUMERO
    (72) F -> . ID
    (73) F -> . ID CORCHETES
    (74) F -> . CADENA
    (75) F -> . CHAR_

    error           shift and go to state 54
    ABS             shift and go to state 43
    READ            shift and go to state 44
    PARIZQ          shift and go to state 36
    ARRAY           shift and go to state 46
    MENOS           shift and go to state 47
    NOTLOGICA       shift and go to state 48
    NOTBIT          shift and go to state 49
    ANDBIT          shift and go to state 50
    NUMERO          shift and go to state 51
    ID              shift and go to state 45
    CADENA          shift and go to state 52
    CHAR_           shift and go to state 53

    EXPRESION                      shift and go to state 55
    ATOMICO                        shift and go to state 39
    FUNCION                        shift and go to state 40
    OPERACION                      shift and go to state 41
    F                              shift and go to state 42

state 23

    (15) INSTRUCCIONES -> GOTO error . PUNTOCOMA

    PUNTOCOMA       shift and go to state 56


state 24

    (20) INSTRUCCIONES -> GOTO LABEL . PUNTOCOMA

    PUNTOCOMA       shift and go to state 57


state 25

    (13) INSTRUCCIONES -> UNSET PARIZQ . error PARDER PUNTOCOMA
    (18) INSTRUCCIONES -> UNSET PARIZQ . ID PARDER PUNTOCOMA

    error           shift and go to state 58
    ID              shift and go to state 59


state 26

    (14) INSTRUCCIONES -> EXIT error . PUNTOCOMA

    PUNTOCOMA       shift and go to state 60


state 27

    (19) INSTRUCCIONES -> EXIT PUNTOCOMA .

    LABEL           reduce using rule 19 (INSTRUCCIONES -> EXIT PUNTOCOMA .)
    PRINT           reduce using rule 19 (INSTRUCCIONES -> EXIT PUNTOCOMA .)
    IF              reduce using rule 19 (INSTRUCCIONES -> EXIT PUNTOCOMA .)
    UNSET           reduce using rule 19 (INSTRUCCIONES -> EXIT PUNTOCOMA .)
    EXIT            reduce using rule 19 (INSTRUCCIONES -> EXIT PUNTOCOMA .)
    GOTO            reduce using rule 19 (INSTRUCCIONES -> EXIT PUNTOCOMA .)
    ID              reduce using rule 19 (INSTRUCCIONES -> EXIT PUNTOCOMA .)
    $end            reduce using rule 19 (INSTRUCCIONES -> EXIT PUNTOCOMA .)


state 28

    (21) DECLARACIONES -> ID ARRAY_ .

    LABEL           reduce using rule 21 (DECLARACIONES -> ID ARRAY_ .)
    PRINT           reduce using rule 21 (DECLARACIONES -> ID ARRAY_ .)
    IF              reduce using rule 21 (DECLARACIONES -> ID ARRAY_ .)
    UNSET           reduce using rule 21 (DECLARACIONES -> ID ARRAY_ .)
    EXIT            reduce using rule 21 (DECLARACIONES -> ID ARRAY_ .)
    GOTO            reduce using rule 21 (DECLARACIONES -> ID ARRAY_ .)
    ID              reduce using rule 21 (DECLARACIONES -> ID ARRAY_ .)
    $end            reduce using rule 21 (DECLARACIONES -> ID ARRAY_ .)


state 29

    (22) ARRAY_ -> error . IGUAL EXPRESION PUNTOCOMA

    IGUAL           shift and go to state 61


state 30

    (24) ARRAY_ -> IGUAL . error PUNTOCOMA
    (26) ARRAY_ -> IGUAL . EXPRESION PUNTOCOMA
    (31) EXPRESION -> . ATOMICO
    (32) EXPRESION -> . FUNCION
    (33) EXPRESION -> . OPERACION
    (44) ATOMICO -> . F
    (45) FUNCION -> . ABS PARIZQ EXPRESION PARDER
    (46) FUNCION -> . READ PARIZQ PARDER
    (47) FUNCION -> . PARIZQ TIPO PARDER ID
    (48) FUNCION -> . ARRAY PARIZQ PARDER
    (34) OPERACION -> . F error F
    (35) OPERACION -> . MENOS error
    (36) OPERACION -> . NOTLOGICA error
    (37) OPERACION -> . NOTBIT error
    (38) OPERACION -> . ANDBIT error
    (39) OPERACION -> . F OPERADOR F
    (40) OPERACION -> . MENOS F
    (41) OPERACION -> . NOTLOGICA F
    (42) OPERACION -> . NOTBIT F
    (43) OPERACION -> . ANDBIT F
    (71) F -> . NUMERO
    (72) F -> . ID
    (73) F -> . ID CORCHETES
    (74) F -> . CADENA
    (75) F -> . CHAR_

    error           shift and go to state 62
    ABS             shift and go to state 43
    READ            shift and go to state 44
    PARIZQ          shift and go to state 36
    ARRAY           shift and go to state 46
    MENOS           shift and go to state 47
    NOTLOGICA       shift and go to state 48
    NOTBIT          shift and go to state 49
    ANDBIT          shift and go to state 50
    NUMERO          shift and go to state 51
    ID              shift and go to state 45
    CADENA          shift and go to state 52
    CHAR_           shift and go to state 53

    EXPRESION                      shift and go to state 63
    ATOMICO                        shift and go to state 39
    FUNCION                        shift and go to state 40
    OPERACION                      shift and go to state 41
    F                              shift and go to state 42

state 31

    (23) ARRAY_ -> CORCHETES . IGUAL error PUNTOCOMA
    (25) ARRAY_ -> CORCHETES . IGUAL EXPRESION PUNTOCOMA

    IGUAL           shift and go to state 64


state 32

    (27) CORCHETES -> CORCHETE . CORCHETES_
    (28) CORCHETES_ -> . CORCHETE CORCHETES_
    (29) CORCHETES_ -> .
    (30) CORCHETE -> . CORIZQ F CORDER

    IGUAL           reduce using rule 29 (CORCHETES_ -> .)
    error           reduce using rule 29 (CORCHETES_ -> .)
    MAS             reduce using rule 29 (CORCHETES_ -> .)
    MENOS           reduce using rule 29 (CORCHETES_ -> .)
    DIV             reduce using rule 29 (CORCHETES_ -> .)
    POR             reduce using rule 29 (CORCHETES_ -> .)
    MODULO          reduce using rule 29 (CORCHETES_ -> .)
    AND             reduce using rule 29 (CORCHETES_ -> .)
    OR              reduce using rule 29 (CORCHETES_ -> .)
    XOR             reduce using rule 29 (CORCHETES_ -> .)
    IGUALQUE        reduce using rule 29 (CORCHETES_ -> .)
    DIFERENTE       reduce using rule 29 (CORCHETES_ -> .)
    MAYORIGUAL      reduce using rule 29 (CORCHETES_ -> .)
    MENORIGUAL      reduce using rule 29 (CORCHETES_ -> .)
    MAYORQUE        reduce using rule 29 (CORCHETES_ -> .)
    MENORQUE        reduce using rule 29 (CORCHETES_ -> .)
    ANDBIT          reduce using rule 29 (CORCHETES_ -> .)
    ORBIT           reduce using rule 29 (CORCHETES_ -> .)
    XORBIT          reduce using rule 29 (CORCHETES_ -> .)
    SHIFTIZQ        reduce using rule 29 (CORCHETES_ -> .)
    SHIFTDER        reduce using rule 29 (CORCHETES_ -> .)
    PARDER          reduce using rule 29 (CORCHETES_ -> .)
    PUNTOCOMA       reduce using rule 29 (CORCHETES_ -> .)
    CORDER          reduce using rule 29 (CORCHETES_ -> .)
    CORIZQ          shift and go to state 33

    CORCHETE                       shift and go to state 65
    CORCHETES_                     shift and go to state 66

state 33

    (30) CORCHETE -> CORIZQ . F CORDER
    (71) F -> . NUMERO
    (72) F -> . ID
    (73) F -> . ID CORCHETES
    (74) F -> . CADENA
    (75) F -> . CHAR_

    NUMERO          shift and go to state 51
    ID              shift and go to state 45
    CADENA          shift and go to state 52
    CHAR_           shift and go to state 53

    F                              shift and go to state 67

state 34

    (4) SENTENCIAS_ -> SENTENCIA SENTENCIAS_ .

    $end            reduce using rule 4 (SENTENCIAS_ -> SENTENCIA SENTENCIAS_ .)


state 35

    (9) ETIQUETA -> LABEL error DOSPUNTOS .

    LABEL           reduce using rule 9 (ETIQUETA -> LABEL error DOSPUNTOS .)
    PRINT           reduce using rule 9 (ETIQUETA -> LABEL error DOSPUNTOS .)
    IF              reduce using rule 9 (ETIQUETA -> LABEL error DOSPUNTOS .)
    UNSET           reduce using rule 9 (ETIQUETA -> LABEL error DOSPUNTOS .)
    EXIT            reduce using rule 9 (ETIQUETA -> LABEL error DOSPUNTOS .)
    GOTO            reduce using rule 9 (ETIQUETA -> LABEL error DOSPUNTOS .)
    ID              reduce using rule 9 (ETIQUETA -> LABEL error DOSPUNTOS .)
    $end            reduce using rule 9 (ETIQUETA -> LABEL error DOSPUNTOS .)


state 36

    (47) FUNCION -> PARIZQ . TIPO PARDER ID
    (68) TIPO -> . INT
    (69) TIPO -> . FLOAT
    (70) TIPO -> . CHAR

    INT             shift and go to state 69
    FLOAT           shift and go to state 70
    CHAR            shift and go to state 71

    TIPO                           shift and go to state 68

state 37

    (11) INSTRUCCIONES -> PRINT PARIZQ error . PARDER PUNTOCOMA

    PARDER          shift and go to state 72


state 38

    (16) INSTRUCCIONES -> PRINT PARIZQ EXPRESION . PARDER PUNTOCOMA

    PARDER          shift and go to state 73


state 39

    (31) EXPRESION -> ATOMICO .

    PARDER          reduce using rule 31 (EXPRESION -> ATOMICO .)
    PUNTOCOMA       reduce using rule 31 (EXPRESION -> ATOMICO .)


state 40

    (32) EXPRESION -> FUNCION .

    PARDER          reduce using rule 32 (EXPRESION -> FUNCION .)
    PUNTOCOMA       reduce using rule 32 (EXPRESION -> FUNCION .)


state 41

    (33) EXPRESION -> OPERACION .

    PARDER          reduce using rule 33 (EXPRESION -> OPERACION .)
    PUNTOCOMA       reduce using rule 33 (EXPRESION -> OPERACION .)


state 42

    (44) ATOMICO -> F .
    (34) OPERACION -> F . error F
    (39) OPERACION -> F . OPERADOR F
    (49) OPERADOR -> . MAS
    (50) OPERADOR -> . MENOS
    (51) OPERADOR -> . DIV
    (52) OPERADOR -> . POR
    (53) OPERADOR -> . MODULO
    (54) OPERADOR -> . AND
    (55) OPERADOR -> . OR
    (56) OPERADOR -> . XOR
    (57) OPERADOR -> . IGUALQUE
    (58) OPERADOR -> . DIFERENTE
    (59) OPERADOR -> . MAYORIGUAL
    (60) OPERADOR -> . MENORIGUAL
    (61) OPERADOR -> . MAYORQUE
    (62) OPERADOR -> . MENORQUE
    (63) OPERADOR -> . ANDBIT
    (64) OPERADOR -> . ORBIT
    (65) OPERADOR -> . XORBIT
    (66) OPERADOR -> . SHIFTIZQ
    (67) OPERADOR -> . SHIFTDER

    PARDER          reduce using rule 44 (ATOMICO -> F .)
    PUNTOCOMA       reduce using rule 44 (ATOMICO -> F .)
    error           shift and go to state 74
    MAS             shift and go to state 76
    MENOS           shift and go to state 77
    DIV             shift and go to state 78
    POR             shift and go to state 79
    MODULO          shift and go to state 80
    AND             shift and go to state 81
    OR              shift and go to state 82
    XOR             shift and go to state 83
    IGUALQUE        shift and go to state 84
    DIFERENTE       shift and go to state 85
    MAYORIGUAL      shift and go to state 86
    MENORIGUAL      shift and go to state 87
    MAYORQUE        shift and go to state 88
    MENORQUE        shift and go to state 89
    ANDBIT          shift and go to state 90
    ORBIT           shift and go to state 91
    XORBIT          shift and go to state 92
    SHIFTIZQ        shift and go to state 93
    SHIFTDER        shift and go to state 94

    OPERADOR                       shift and go to state 75

state 43

    (45) FUNCION -> ABS . PARIZQ EXPRESION PARDER

    PARIZQ          shift and go to state 95


state 44

    (46) FUNCION -> READ . PARIZQ PARDER

    PARIZQ          shift and go to state 96


state 45

    (72) F -> ID .
    (73) F -> ID . CORCHETES
    (27) CORCHETES -> . CORCHETE CORCHETES_
    (30) CORCHETE -> . CORIZQ F CORDER
